[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/gamestates/stage.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/rock sprites.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/GROUND 2-export.png" type="Texture" id=4]
[ext_resource path="res://scenes/enemies/enemy_spawner.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/goal.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/hero.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/archer.tscn" type="PackedScene" id=11]

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.5 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 144, 90 )

[sub_resource type="Curve2D" id=3]
_data = {
"points": PoolVector2Array( -166.06, 31.4856, 166.06, -31.4856, 348.088, 88.2037, -5.93688, 19.6824, 5.93688, -19.6824, 272.566, -3.66988, -28.2424, 31.9648, 28.2424, -31.9648, 480.133, -26.3622, -226.261, 24.5038, 226.261, -24.5038, 483.666, -92.1352 )
}

[node name="Stage" type="Control" groups=[
"stage",
]]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ground" type="Sprite" parent="."]
texture = ExtResource( 4 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 288, 288 )

[node name="LineAsHeroPath" type="Line2D" parent="."]
visible = false
position = Vector2( 0, 10 )
points = PoolVector2Array( 124, 236, 164, 227, 173, 220, 177, 213, 174, 205, 161, 194, 56, 156, 48, 150, 49, 143, 113, 139, 195, 139, 233, 134, 251, 126, 253, 117, 250, 111, 217, 99, 168, 84, 163, 78, 169, 71, 261, 52 )
width = 15.0
width_curve = SubResource( 1 )
default_color = Color( 0.466667, 0.403922, 0.27451, 1 )
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="Goal" parent="." instance=ExtResource( 9 )]
position = Vector2( 247.541, 35.3171 )

[node name="Game" type="YSort" parent="."]

[node name="EnemySpawner" parent="Game" instance=ExtResource( 8 )]
position = Vector2( 144, 147 )
monitoring = false
monitorable = false
collision_layer = 0
collision_mask = 0

[node name="SpawnArea" type="CollisionShape2D" parent="Game/EnemySpawner"]
shape = SubResource( 2 )

[node name="HeroPath" type="Path2D" parent="Game"]
position = Vector2( -227.21, 149.787 )
curve = SubResource( 3 )

[node name="HeroPathFollow" type="PathFollow2D" parent="Game/HeroPath"]
position = Vector2( 348.088, 88.2037 )
rotate = false
loop = false

[node name="Hero" parent="Game/HeroPath/HeroPathFollow" instance=ExtResource( 10 )]

[node name="Cliffs" type="Sprite" parent="."]
z_index = 1
texture = ExtResource( 4 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 288, 288, 288 )

[node name="Rocks" type="Sprite" parent="."]
position = Vector2( 197.5, 208 )
z_index = 1
texture = ExtResource( 3 )
centered = false

[node name="Archer" parent="." instance=ExtResource( 11 )]
position = Vector2( 16.0246, 258.979 )

[node name="HeroPathTween" type="Tween" parent="."]

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="UI"]
margin_left = 5.0
margin_top = 5.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelHealth" type="Label" parent="UI/HBoxContainer"]
margin_right = 93.0
margin_bottom = 14.0
text = "Hero Health: 1"

[node name="HBoxContainer" type="HBoxContainer" parent="UI/HBoxContainer"]
margin_left = 97.0
margin_right = 97.0
margin_bottom = 14.0

[node name="BasinContainer" type="HBoxContainer" parent="UI"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 43.0
margin_top = -34.0
margin_right = 188.0
margin_bottom = -8.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="mouse_clicked" from="." to="Archer" method="_on_Stage_mouse_clicked"]
[connection signal="tween_completed" from="HeroPathTween" to="." method="_on_HeroPathTween_tween_completed"]
